crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__kroxa_titan_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 46,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "When ~ enters, sacrifice it unless it escaped."
      },
      "node": {
        "Trigger": {
          "Parsed": {
            "condition": "ChangesZone",
            "partial_def": {
              "mode": "ChangesZone",
              "execute": null,
              "valid_card": {
                "type": "SelfRef"
              },
              "origin": null,
              "destination": "Battlefield",
              "trigger_zones": [
                "Battlefield"
              ],
              "phase": null,
              "optional": false,
              "damage_kind": "Any",
              "secondary": false,
              "valid_target": null,
              "valid_source": null,
              "description": null,
              "constraint": null,
              "condition": null,
              "batched": false
            },
            "body": {
              "EffectChain": {
                "clauses": [
                  {
                    "id": 0,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 1
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 0,
                        "end_byte": 12,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 0
                      },
                      "fragment": "sacrifice it"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "Sacrifice",
                        "target": {
                          "type": "SelfRef"
                        },
                        "count": {
                          "type": "Fixed",
                          "value": 1
                        }
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": null,
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "where_x_scope": "ScopedPlayer",
                    "unless_pay": null
                  }
                ],
                "kind": "Spell",
                "continuation_kind": null,
                "player_scope_rewrite": "Apply",
                "chain_rounding": null,
                "actor": null,
                "in_trigger": true,
                "repeat_until": null
              }
            },
            "modifiers": {
              "optional": false,
              "unless_pay": null,
              "intervening_if": {
                "type": "Not",
                "condition": {
                  "type": "CastVariantPaid",
                  "variant": "Escape"
                }
              },
              "trigger_subject": {
                "type": "SelfRef"
              },
              "first_time_limit": null,
              "constraint": null,
              "has_up_to": false,
              "effect_lower": "sacrifice it unless it escaped.",
              "relative_player_scope": null
            },
            "source_text": "When ~ enters, sacrifice it unless it escaped.",
            "die_results": []
          }
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 47,
          "end_byte": 183,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever ~ enters or attacks, each opponent discards a card, then each opponent who didn't discard a nonland card this way loses 3 life."
      },
      "node": {
        "Trigger": {
          "Parsed": {
            "condition": "EntersOrAttacks",
            "partial_def": {
              "mode": "EntersOrAttacks",
              "execute": null,
              "valid_card": {
                "type": "SelfRef"
              },
              "origin": null,
              "destination": "Battlefield",
              "trigger_zones": [
                "Battlefield"
              ],
              "phase": null,
              "optional": false,
              "damage_kind": "Any",
              "secondary": false,
              "valid_target": null,
              "valid_source": null,
              "description": null,
              "constraint": null,
              "condition": null,
              "batched": false
            },
            "body": {
              "EffectChain": {
                "clauses": [
                  {
                    "id": 0,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 1
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 0,
                        "end_byte": 29,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 0
                      },
                      "fragment": "each opponent discards a card"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "Discard",
                        "count": {
                          "type": "Fixed",
                          "value": 1
                        },
                        "target": {
                          "type": "Controller"
                        }
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": "Then",
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": {
                      "type": "Opponent"
                    },
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  },
                  {
                    "id": 1,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 2
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 36,
                        "end_byte": 105,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 1
                      },
                      "fragment": "each opponent who didn't discard a nonland card this way loses 3 life"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "LoseLife",
                        "amount": {
                          "type": "Fixed",
                          "value": 3
                        },
                        "target": {
                          "type": "ScopedPlayer"
                        }
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": null,
                    "condition": {
                      "type": "And",
                      "conditions": [
                        {
                          "type": "Not",
                          "condition": {
                            "type": "ZoneChangedThisWay",
                            "filter": {
                              "type": "Typed",
                              "type_filters": [
                                "Card",
                                {
                                  "Non": "Land"
                                }
                              ],
                              "controller": null,
                              "properties": []
                            }
                          }
                        },
                        {
                          "type": "ScopedPlayerMatches",
                          "filter": {
                            "type": "Opponent"
                          }
                        }
                      ]
                    },
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  }
                ],
                "kind": "Spell",
                "continuation_kind": null,
                "player_scope_rewrite": "Apply",
                "chain_rounding": null,
                "actor": null,
                "in_trigger": true,
                "repeat_until": null
              }
            },
            "modifiers": {
              "optional": false,
              "unless_pay": null,
              "intervening_if": null,
              "trigger_subject": {
                "type": "SelfRef"
              },
              "first_time_limit": null,
              "constraint": null,
              "has_up_to": false,
              "effect_lower": "each opponent discards a card, then each opponent who didn't discard a nonland card this way loses 3 life.",
              "relative_player_scope": null
            },
            "source_text": "Whenever ~ enters or attacks, each opponent discards a card, then each opponent who didn't discard a nonland card this way loses 3 life.",
            "die_results": []
          }
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 184,
          "end_byte": 316,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Escape—{B}{B}{R}{R}, Exile five other cards from your graveyard. (You may cast this card from your graveyard for its escape cost.)"
      },
      "node": {
        "Keyword": {
          "Escape": {
            "type": "NonMana",
            "data": {
              "type": "Composite",
              "costs": [
                {
                  "type": "Mana",
                  "cost": {
                    "type": "Cost",
                    "shards": [
                      "Black",
                      "Black",
                      "Red",
                      "Red"
                    ],
                    "generic": 0
                  }
                },
                {
                  "type": "Exile",
                  "count": 5,
                  "zone": "Graveyard",
                  "filter": {
                    "type": "Typed",
                    "type_filters": [
                      "Card"
                    ],
                    "controller": "You",
                    "properties": [
                      {
                        "type": "Another"
                      },
                      {
                        "type": "InZone",
                        "zone": "Graveyard"
                      }
                    ]
                  }
                }
              ]
            }
          }
        }
      }
    }
  ],
  "source_text": "When Kroxa enters, sacrifice it unless it escaped.\nWhenever Kroxa enters or attacks, each opponent discards a card, then each opponent who didn't discard a nonland card this way loses 3 life.\nEscape—{B}{B}{R}{R}, Exile five other cards from your graveyard. (You may cast this card from your graveyard for its escape cost.)",
  "card_name": "Kroxa, Titan of Death's Hunger"
}
