crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__kroxa_titan_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "ChangesZone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "Sacrifice",
          "target": {
            "type": "SelfRef"
          },
          "count": {
            "type": "Fixed",
            "value": 1
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": null,
      "destination": "Battlefield",
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "When ~ enters, sacrifice it unless it escaped.",
      "constraint": null,
      "condition": {
        "type": "Not",
        "condition": {
          "type": "CastVariantPaid",
          "variant": "Escape"
        }
      },
      "batched": false
    },
    {
      "mode": "EntersOrAttacks",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "Discard",
          "count": {
            "type": "Fixed",
            "value": 1
          },
          "target": {
            "type": "Controller"
          }
        },
        "cost": null,
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "LoseLife",
            "amount": {
              "type": "Fixed",
              "value": 3
            },
            "target": {
              "type": "ScopedPlayer"
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": {
            "type": "And",
            "conditions": [
              {
                "type": "Not",
                "condition": {
                  "type": "ZoneChangedThisWay",
                  "filter": {
                    "type": "Typed",
                    "type_filters": [
                      "Card",
                      {
                        "Non": "Land"
                      }
                    ],
                    "controller": null,
                    "properties": []
                  }
                }
              },
              {
                "type": "ScopedPlayerMatches",
                "filter": {
                  "type": "Opponent"
                }
              }
            ]
          },
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false,
        "player_scope": {
          "type": "Opponent"
        }
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": null,
      "destination": "Battlefield",
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "Whenever ~ enters or attacks, each opponent discards a card, then each opponent who didn't discard a nonland card this way loses 3 life.",
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [
    {
      "Escape": {
        "type": "NonMana",
        "data": {
          "type": "Composite",
          "costs": [
            {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [
                  "Black",
                  "Black",
                  "Red",
                  "Red"
                ],
                "generic": 0
              }
            },
            {
              "type": "Exile",
              "count": 5,
              "zone": "Graveyard",
              "filter": {
                "type": "Typed",
                "type_filters": [
                  "Card"
                ],
                "controller": "You",
                "properties": [
                  {
                    "type": "Another"
                  },
                  {
                    "type": "InZone",
                    "zone": "Graveyard"
                  }
                ]
              }
            }
          ]
        }
      }
    }
  ]
}
