crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__krumar_initiate_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 140,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{X}{B}, {T}, Pay X life: ~ endures X. Activate only as a sorcery. (Put X +1/+1 counters on it or create an X/X white Spirit creature token.)"
      },
      "node": {
        "Spell": {
          "source_text": "~ endures X",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 11,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "~ endures X"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Endure",
                    "amount": {
                      "type": "Ref",
                      "qty": {
                        "type": "Variable",
                        "name": "X"
                      }
                    },
                    "subject": {
                      "type": "SelfRef"
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Composite",
              "costs": [
                {
                  "type": "Mana",
                  "cost": {
                    "type": "Cost",
                    "shards": [
                      "X",
                      "Black"
                    ],
                    "generic": 0
                  }
                },
                {
                  "type": "Tap"
                },
                {
                  "type": "PayLife",
                  "amount": {
                    "type": "Ref",
                    "qty": {
                      "type": "Variable",
                      "name": "X"
                    }
                  }
                }
              ]
            },
            "activation_restrictions": [
              {
                "type": "AsSorcery"
              }
            ],
            "description": "{X}{B}, {T}, Pay X life: ~ endures X. Activate only as a sorcery.",
            "stages": [
              "NormalizeActivatedManaInstead",
              "ExtractCostReduction",
              "ExtractManaSpendTrigger"
            ]
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "{X}{B}, {T}, Pay X life: This creature endures X. Activate only as a sorcery. (Put X +1/+1 counters on it or create an X/X white Spirit creature token.)",
  "card_name": "Krumar Initiate"
}
