crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__leonin_arbiter_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 111,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Players can't search libraries. Any player may pay {2} for that player to ignore this effect until end of turn."
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "static_structure",
            "fragment": "Static pattern matched but line failed static parser: Players can't search libraries. Any player may pay {2} for that player to ignore this effect until end of turn.",
            "description": "Players can't search libraries. Any player may pay {2} for that player to ignore this effect until end of turn."
          },
          "min_x_value": 0
        }
      }
    }
  ],
  "source_text": "Players can't search libraries. Any player may pay {2} for that player to ignore this effect until end of turn.",
  "card_name": "Leonin Arbiter"
}
