crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__leyline_of_anticipation_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "BeginGame",
        "effect": {
          "type": "ChangeZone",
          "origin": "Hand",
          "destination": "Battlefield",
          "target": {
            "type": "SelfRef"
          },
          "owner_library": false,
          "enter_transformed": false,
          "enter_tapped": false,
          "enters_attacking": false
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "If this card is in your opening hand, you may begin the game with it on the battlefield.",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": true,
        "forward_result": false
      }
    },
    {
      "PreLoweredStatic": {
        "mode": {
          "CastWithKeyword": {
            "keyword": "Flash"
          }
        },
        "affected": {
          "type": "Any"
        },
        "modifications": [],
        "condition": null,
        "affected_zone": null,
        "effect_zone": null,
        "active_zones": [
          "Battlefield"
        ],
        "characteristic_defining": false,
        "description": "You may cast spells as though they had flash."
      }
    }
  ],
  "source_text": "If this card is in your opening hand, you may begin the game with it on the battlefield.\nYou may cast spells as though they had flash.",
  "card_name": "Leyline of Anticipation"
}
