crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__lighthouse_chronologist_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "Phase",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "ExtraTurn",
          "target": {
            "type": "Controller"
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": null,
      "origin": null,
      "destination": null,
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": "End",
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "At the beginning of each end step, if it's not your turn, take an extra turn after this one.",
      "constraint": null,
      "condition": {
        "type": "And",
        "conditions": [
          {
            "type": "Not",
            "condition": {
              "type": "DuringPlayersTurn",
              "player": {
                "type": "Controller"
              }
            }
          },
          {
            "type": "HasCounters",
            "counters": {
              "type": "OfType",
              "data": "level"
            },
            "minimum": 7
          }
        ]
      },
      "batched": false
    }
  ],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [
        {
          "type": "SetPower",
          "value": 2
        },
        {
          "type": "SetToughness",
          "value": 4
        }
      ],
      "condition": {
        "type": "HasCounters",
        "counters": {
          "type": "OfType",
          "data": "level"
        },
        "minimum": 4,
        "maximum": 6
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "LEVEL 4-6 / 2/4"
    },
    {
      "mode": "Continuous",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [
        {
          "type": "SetPower",
          "value": 3
        },
        {
          "type": "SetToughness",
          "value": 5
        }
      ],
      "condition": {
        "type": "HasCounters",
        "counters": {
          "type": "OfType",
          "data": "level"
        },
        "minimum": 7
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "LEVEL 7+ / 3/5"
    }
  ],
  "replacements": [],
  "extractedKeywords": [
    {
      "LevelUp": {
        "type": "Cost",
        "shards": [
          "Blue"
        ],
        "generic": 0
      }
    }
  ]
}
